package tn.faculte.facultebackend.Entity;

public enum CourseStatus {

    PROPOSED,
    CREATED
}
