package tn.faculte.facultebackend.Entity;

public enum ReportStatus {
    PENDING,
    RESOLVED,
    DISMISSED
}
